# arch-guard

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/formatters/: terminal.rs
src/rules/: business_logic.rs  debug_statements.rs  mod.rs
src/utils/: file_finder.rs
