[package]
name = "arch-guard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arch-guard"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# File system traversal
walkdir = "2.4"

# Regular expressions
regex = "1.10"

# Colored terminal output
colored = "2.1"

# Error handling
anyhow = "1.0"

# Serialization (for config files later)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"